<resources>
    <string name="app_name">PlantCare</string>
    <string name="welcome">Bienvenue !</string>
    <string name="description_app">Vous souhaitez vous occuper d\'une plante d\'une façon amusante ? Vous êtes au bon endroit ! Inscrivez-vous et commencer à entretenir votre plante avec Plant Care !</string>
    <string name="sign_in">Se connecter</string>
    <string name="salut">Salut !</string>
    <string name="whoAreU">On souhaiterait bien savoir qui tu es !</string>
    <string name="pseudo">Pseudo</string>
    <string name="indice_pseudo">Thibma</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="indice_mail">thibma@plantcare.fr</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirm_mot_de_passe">Confirmer mot de passe</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="hello">Hello !</string>
    <string name="description_sign_in">Comment ça va depuis la dernière fois ?</string>
    <string name="your_robots">Vos robots</string>
    <string name="empty_list">La liste est vide ! Ajoutez un robot !</string>
    <string name="add_button">Add button</string>
    <string name="add_robot">Ajouter un robot</string>
    <string name="robot_name">Nom du robot</string>
    <string name="nono">Nono le petit robot</string>
    <string name="add_the_robot">Ajouter le robot</string>
    <string name="bluetooth_image">Bluetooth image</string>
    <string name="nom_du_dispositif">Nom du dispositif</string>
    <string name="adresse_mac_du_dispositif">Adresse mac du dispositif</string>
    <string name="plante">Plante</string>
    <string name="robot">Robot</string>
</resources>