<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewWelcomeInSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hello"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/textColorInTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/description_sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toStartOf="@+id/guidelineSignInTextEditEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineSignInTextEditStart"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeInSignup" />

    <TextView
        android:id="@+id/textViewPseudoSignIn"
        style="@style/AppTheme.TextViewSignup"
        android:text="@string/pseudo"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextUsername"
        app:layout_constraintStart_toStartOf="@+id/guidelineSignInTextEditStart" />

    <EditText
        android:id="@+id/editTextTextUsername"
        style="@style/AppTheme.TextEdit"
        android:layout_marginTop="45dp"
        android:background="@drawable/text_edit"
        android:hint="@string/indice_pseudo"
        android:inputType="textPersonName"
        android:textColor="@color/textColorInTextEdit"
        app:layout_constraintEnd_toStartOf="@+id/guidelineSignInTextEditEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineSignInTextEditStart"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewPasswordSignIn"
        style="@style/AppTheme.TextViewSignup"
        android:text="@string/mot_de_passe"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordSignIn"
        app:layout_constraintStart_toStartOf="@+id/guidelineSignInTextEditStart" />

    <EditText
        android:id="@+id/editTextPasswordSignIn"
        style="@style/AppTheme.TextEdit"
        android:layout_marginTop="32dp"
        android:background="@drawable/text_edit"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:textColor="@color/textColorInTextEdit"
        app:layout_constraintEnd_toStartOf="@+id/guidelineSignInTextEditEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineSignInTextEditStart"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextUsername" />

    <Button
        android:id="@+id/buttonSignIn"
        style="@style/AppTheme.ButtonSignUp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_color_principal"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineSignInTextEditEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineSignInTextEditStart" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSignInTextEditStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSignInTextEditEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>